# x-git-agecrypt

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  bunfig.toml  package.json
[dev]/planlog/: 251221.aliases.md  251221b.milking-passphrase.md
src/: age.rs  main.rs
src/cli/: args.rs  internal.rs  mod.rs  public.rs
src/config/: age_identities.rs  app.rs  mod.rs
